# html-element-rs

./: .rustfmt.toml  Cargo.toml  LICENSE.md  README.md
crates/html-element/: Cargo.toml
crates/html-element/src/: lib.rs  prelude.rs
crates/html-element/src/content/: embedded.rs  flow.rs  heading.rs  interactive.rs  metadata.rs  mod.rs  palpable.rs  phrasing.rs  script_supporting.rs  sectioning.rs
