#:schema https://json.schemastore.org/cargo.json
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
default-members = ["crates/html-element"]
members = ["crates/*"]
resolver = "2"

[workspace.package]
authors = ["Mateusz Kadlubowski <xeho91@pm.me>"]
documentation = "https://docs.rs/html-element"
edition = "2021"
homepage = "https://github.com/terminal-nerds/html-element-rs"
license-file = "LICENSE.md"
readme = "README.md"
publish = true
repository = "https://github.com/terminal-nerds/html-element-rs"
version = "0.0.1"

[workspace.dependencies]
strum = { version = "0.25.0" }
strum_macros = { version = "0.25.3" }
